tests/fail-objfn1.mg
object main { void same() { } void same() { } } // error: duplicate fns
